# habit-tracker-bot

./: .gitignore  CODE_REVIEW.md  Dockerfile  README.md  SENSORS.md  database.py  docker-compose.yml  go.mod  go.sum  index.html  line.py  main.py  requirements.txt  server_errors.txt  twitter.py
cmd/server/: main.go
data/: habits.db
habit_locker/: .flutter-plugins-dependencies  README.md  pubspec.yaml
habit_locker/android/: local.properties
habit_locker/android/app/: build.gradle.kts
habit_locker/android/app/src/main/: AndroidManifest.xml
habit_locker/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
habit_locker/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
habit_locker/ios/Runner.xcodeproj/: project.pbxproj
habit_locker/lib/: main.dart
habit_locker/linux/: CMakeLists.txt
habit_locker/linux/runner/: my_application.cc
habit_locker/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
habit_locker/macos/Runner.xcodeproj/: project.pbxproj
habit_locker/macos/Runner/Configs/: AppInfo.xcconfig
habit_locker/test/: widget_test.dart
habit_locker/web/: index.html  manifest.json
habit_locker/windows/: CMakeLists.txt
habit_locker/windows/runner/: Runner.rc  main.cpp
internal/delivery/http/: handler.go
internal/domain/: models.go
internal/infrastructure/db/: sqlite.go
internal/infrastructure/line/: bot.go
internal/usecase/: habit_usecase.go
locker-rust/: Cargo.toml  agent_errors.txt  agent_output.txt  build_errors_utf8.txt  check_errors.txt
locker-rust/src/: main.rs
(+3 files in other folders)
